<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
    >

<LinearLayout
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/commentt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about"
        android:inputType="text"
        android:maxLength="30"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/commentd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:maxLength="300"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cacel" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" />
    </LinearLayout>
</LinearLayout>


</android.support.v7.widget.CardView>