<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:id="@+id/txtLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/change_lang"
            android:textColor="@android:color/white"
            android:background="@color/cardview_shadow_start_color"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qwe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/user" />
        <EditText
            android:id="@+id/edit_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="14"
            android:textColor="@android:color/white"
            android:textColorHint="@color/place_autocomplete_search_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@color/place_autocomplete_search_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/place_autocomplete_search_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_Password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeatpassword"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/place_autocomplete_search_hint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_SecureCode"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:hint="@string/securecode"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/place_autocomplete_search_hint"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/qwe"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="@color/cardview_dark_background"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/txtSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/txtlogup"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>


</RelativeLayout>