<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="14"
        android:textColor="@android:color/black"
        android:textColorHint="@color/place_autocomplete_search_hint"
        android:textSize="24sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_SecureCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/securecode"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/place_autocomplete_search_hint"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>