<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:id="@+id/txtLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/change_lang"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/user" />

        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="14"
                android:textColor="@android:color/white"
                android:textColorHint="@color/place_autocomplete_search_hint"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@color/place_autocomplete_search_hint"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="@color/cardview_dark_background"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:orientation="vertical">

            <!--<CheckBox
                android:id="@+id/ckbRemember"
                style="@style/Material.Drawable.CheckBox"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_start_color"
                android:text="@string/remember"
                android:textColor="@android:color/white" />-->

            <TextView
                android:id="@+id/txtForgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forget_pwd"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/txtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/txtlogin"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>